fix to card-rec-full image on firefox

--- a/static/css/partials/_card-rec-full.scss
+++ b/static/css/partials/_card-rec-full.scss
@@ -45,7 +45,6 @@
 
                 > figure {
                     @include tintafter();
-                    width:auto;
                 }
 
                 > .content {
